chore: fix menus not having correct max height on mobile web browsers

--- a/packages/web/src/stylesheets/_main.scss
+++ b/packages/web/src/stylesheets/_main.scss
@@ -25,10 +25,10 @@
 
   --reach-checkbox: 1;
 
-  --safe-area-inset-top: 0;
-  --safe-area-inset-bottom: 0;
-  --safe-area-inset-left: 0;
-  --safe-area-inset-right: 0;
+  --safe-area-inset-top: 0px;
+  --safe-area-inset-bottom: 0px;
+  --safe-area-inset-left: 0px;
+  --safe-area-inset-right: 0px;
 
   --sn-stylekit-font-size-editor: 0.9375rem;
 
